@@ -5,6 +5,11 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
     or "skew" to calculate the symmetric or skew-symmetric property
     of a matrix.  Performance has also been increased.
 
+ ** Figure graphic objects have a new property "Number" which is
+    read-only and will return the handle (number) of the figure.
+    However, if the property "IntegerHandle" has been set to "off" then
+    the property will return an empty matrix ([]).
+
  ** Deprecated functions.
 
     The following functions have been deprecated in Octave 5.0 and will
